--- a/src/app/TourDeheroes/components/heroe-tarjeta/heroe-tarjeta.component.html
+++ b/src/app/TourDeheroes/components/heroe-tarjeta/heroe-tarjeta.component.html
@@ -1,5 +1,5 @@
 <div class="card animated fadeIn fast">
-    <img class="card-img-top img-fluid" [src]="heroes.img" class="card-img-top" [alt]="heroes.nombre">
+    <img class="card-img-top img-fluid" [src]="heroes.tourimg" class="card-img-top" [alt]="heroes.nombre">
     <div class="card-block">
         <h5 class="card-title">{{ heroes.nombre }}</h5>
         <p class="card-text">{{ heroes.bio }}</p>
