--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,17 @@
+<div class="container-fluid">
+    <div class="row">
+        <div id="navbar" class="col-md-12">
+            <app-navbar></app-navbar>
+        </div>
+        <!-- /#Navbar -->
+        <div id="sidebar" class="col-3">
+            <app-sidebar></app-sidebar>
+        </div>
+        <!-- /#Sidebar -->
 
-<router-outlet></router-outlet>
+        <div class="col-9">
+            <router-outlet></router-outlet>
+        </div>
+
+    </div>
+</div>
