--- a/src/app/TourDeheroes/components/home/home.component.html
+++ b/src/app/TourDeheroes/components/home/home.component.html
@@ -1,8 +1,10 @@
-<div class="jumbotron jumbotron-fluid animated fadeIn fast">
-
-    <div class="container">
-        <h1 class="display-4">Comic app</h1>
-        <p class="lead">Esta es una aplicación de comics</p>
-
+<div class="container">
+    <div class="row">
+        <div class="col-md-9">
+            <div id="jumbotron" class="col-md-9  jumbotron jumbotron-fluid animated fadeIn fast">
+                <h1 class="display-4">Comic app</h1>
+                <p class="lead">Esta es una aplicación de comics</p>
+            </div>
+        </div>
     </div>
 </div>
