--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,196 +1,181 @@
 <div class="container">
-    <div class="row">
-        <div id="navbar" class="col-md-12">
-            <app-navbar></app-navbar>
-        </div>
-        <!-- /#Navbar -->
-        <div id="sidebar" class="col-md-3">
-            <app-sidebar></app-sidebar>
-        </div>
-        <!-- /#Sidebar -->
-        <div class="col-md-9">
-            <div class="row">
-                <div id="navprofile" class="col-md-12">
-                    <nav class="navbar navbar-light bg-light">
-                        <form class="form-inline">
-                            <a href="#nameprofile" class="btn btn-sm btn-outline-secondary" type="button">perfil</a>
-                            <a href="#educacion" class="btn btn-sm btn-outline-secondary" type="button">Educación</a>
-                            <a href="#experiencia" class="btn btn-sm btn-outline-secondary" type="button">Experiencia</a>
-                            <a href="#ejercicios" class="btn btn-sm btn-outline-secondary" type="button">Portafolio</a>
-                        </form>
-                    </nav>
-                </div>
-                <!-- /#Navprofile -->
-                <div id="imageprofile" class="col-md-12 center">
-                    <img src="assets/profile/profile.jpg" width="250" class="logo rounded-circle">
-                </div>
-                <!-- /#imageprofile -->
-                <div id="nameprofile" class="col-md-12 center">
-                    <a name="profile">
-                        <h4>
-                            <span class="middle">Pablo Everardo López Camargo</span>
-                        </h4>
-
-                        <p style="text-align: center">Santa Catarina, Nuevo León. | <a href="#">pablo_lopezc93@hotmail.com</a> | (833) 403 1037</p>
-
-                        <p style="text-align: center">Economista con especialidad en matemáticas por la Universidad Autónoma de Tamaulipas, desarrollo en estrategias de Riesgo Bursátil, Financiero y Estadísticos Macroeconómicos</p>
-
-                    </a>
-                </div>
-
-                <!-- /#profile -->
-
-                <div id="educacion" class=" col-md-12">
-                    <a name="educacion">
-                        <h2>Educación</h2>
-
-                        <div class="row">
-                            <div class="col-sm-12 col-md-3 text-left border-right pr-4">
-                                <div class="date">2012-2016</div>
-                                <h4>Universidad Autónoma de Tamaulipas</h4>
-                                <p class="subtitle">Licenciatura en Economía</p>
-                            </div>
-
-                            <div class="col text-left mt-md-3">
-                                <p class="pl-md-2 item-description">Especialidad en matemáticas </p>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-sm-12 col-md-3 text-left border-right pr-4">
-                                <div class="date">2018</div>
-                                <h4>Escuela Bancaria y Comercial</h4>
-                                <p class="subtitle"></p>
-                            </div>
-                            <div class="col text-left mt-md-3">
-                                <p class="pl-md-2 item-description">Especialidad en Finanzas y Banca </p>
-                            </div>
-
-                        </div>
-
-                        <div class="row">
-                            <div class="col-sm-12 col-md-3 text-left border-right pr-4">
-                                <div class="date">2015</div>
-                                <h4>Asociación Nacional de Economía </h4>
-                                <p class="subtitle"></p>
-                            </div>
-
-                            <div class="col text-left mt-md-3">
-                                <p class="pl-md-2 item-description">Matemáticas Macroeconomícas </p>
-                            </div>
-                        </div>
-
-                    </a>
-                </div>
-
-                <!-- /#Educación -->
-
-                <div id="experiencia" class="col-md-12">
-                    <a name="experiencia">
-                        <h2>Experiencia</h2>
-
-                        <div id="Exp1" class="row">
-                            <div class="col-sm-12 col-md-3 text-left border-right pr-4">
-                                <div class="date">Noviembre 2018- Febrero 2019</div>
-                                <h4>Grupo GAF Riesgos</h4>
-                                <p class="subtitle">Proyección de datos (Proyecto)</p>
-                            </div>
-
-                            <div class="col text-left mt-md-3">
-                                <ul class="pl-md-2 item-description">
-                                    <li>Construcción de indicadores y manejo de base de datos para elaboración de metodología de riesgos en materia de PLD y FT.</li>
-                                    <li>Revisión de grado de riesgo del cliente.</li>
-                                    <li>Ejecución de pruebas a sistemas para liberación de desarrollos.</li>
-                                </ul>
-                            </div>
-                        </div>
-
-                        <div id="Exp2" class="row">
-                            <div class="col-sm-12 col-md-3 text-left border-right pr-4">
-                                <div class="date">Febrero - Noviembre 2017
-                                </div>
-                                <h4>Instituto Metropolitano de Planeación (IMEPLAN Zona Conurbada Tampico)</h4>
-                                <p class="subtitle">Analista de Base de Datos (Proyecto)</p>
-                            </div>
-
-                            <div class="col text-left mt-md-3">
-                                <ul class="pl-md-2 item-description">
-                                    <li>Construcción de indicadores para medir la expansión de la marcha urbana.</li>
-                                    <li>Manejo de Base de datos para la tercerización de la economía de la zona conurbada de Tampico.</li>
-                                    <li>Análisis de cuartiles sobre el impacto en la reducción de la competitividad laboral en la zona conurbada de Tampico.</li>
-                                </ul>
-                            </div>
-                        </div>
-
-                        <div id="Exp3" class="row">
-                            <div class="col-sm-12 col-md-3 text-left border-right pr-4">
-                                <div class="date">Enero 2015- Enero 2017</div>
-                                <h4>Cuerpo Académico de Economía y sociedad</h4>
-                                <p class="subtitle">Proyección y análisis de Base de datos Para el programa social PROSPERA</p>
-                            </div>
-
-                            <div class="col text-left mt-md-3">
-                                <ul class="pl-md-2 item-description">
-                                    <li>Construcción de indicadores para conocer la disparidad salarial.</li>
-                                    <li>Consumo de Base de datos para antecedentes de pobreza en la zona sur del País</li>
-                                    <li>Proyección de estimadores para el crecimiento de la pobreza para los próximos 20 años.</li>
-                                </ul>
-                            </div>
-                        </div>
-
-                    </a>
-                </div>
-
-                <!-- /#Experiencia -->
-
-
-                <div class="bd-example">
-                    <a name="ejercicios">
-                        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="..." class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>First slide label</h5>
-                                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                                    </div>
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="..." class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>Second slide label</h5>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                    </div>
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="..." class="d-block w-100" alt="...">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>Third slide label</h5>
-                                        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Next</span>
-                            </a>
-                        </div>
-                    </a>
-                </div>
-
-
-                <!-- /#Ejercicios -->
-            </div>
-        </div>
-
+    <div id="navprofile" class="col-12">
+        <nav class="navbar navbar-light bg-light">
+            <form class="form-inline">
+                <a href="#nameprofile" class="btn btn-sm btn-outline-secondary" type="button">perfil</a>
+                <a href="#educacion" class="btn btn-sm btn-outline-secondary" type="button">Educación</a>
+                <a href="#experiencia" class="btn btn-sm btn-outline-secondary" type="button">Experiencia</a>
+                <a href="#ejercicios" class="btn btn-sm btn-outline-secondary" type="button">Portafolio</a>
+            </form>
+        </nav>
     </div>
+    <!-- /#Navprofile -->
+    <div id="imageprofile" class="col-12 center">
+        <img src="assets/profile/profile.jpg" width="250" class="logo rounded-circle">
+    </div>
+    <!-- /#imageprofile -->
+    <div id="nameprofile" class="col-12 center">
+        <a name="profile">
+            <h4>
+                <span class="middle">Pablo Everardo López Camargo</span>
+            </h4>
+
+            <p style="text-align: center">Santa Catarina, Nuevo León. | <a href="#">pablo_lopezc93@hotmail.com</a> | (833) 403 1037</p>
+
+            <p style="text-align: center">Economista con especialidad en matemáticas por la Universidad Autónoma de Tamaulipas, desarrollo en estrategias de Riesgo Bursátil, Financiero y Estadísticos Macroeconómicos</p>
+
+        </a>
+    </div>
+
+    <!-- /#profile -->
+
+    <div id="educacion" class=" col-12">
+        <a name="educacion">
+            <h2>Educación</h2>
+
+            <div class="row">
+                <div class="col-sm-12 col-md-3 text-left border-right pr-4">
+                    <div class="date">2012-2016</div>
+                    <h4>Universidad Autónoma de Tamaulipas</h4>
+                    <p class="subtitle">Licenciatura en Economía</p>
+                </div>
+
+                <div class="col text-left mt-md-3">
+                    <p class="pl-md-2 item-description">Especialidad en matemáticas </p>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12 col-md-3 text-left border-right pr-4">
+                    <div class="date">2018</div>
+                    <h4>Escuela Bancaria y Comercial</h4>
+                    <p class="subtitle"></p>
+                </div>
+                <div class="col text-left mt-md-3">
+                    <p class="pl-md-2 item-description">Especialidad en Finanzas y Banca </p>
+                </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12 col-md-3 text-left border-right pr-4">
+                    <div class="date">2015</div>
+                    <h4>Asociación Nacional de Economía </h4>
+                    <p class="subtitle"></p>
+                </div>
+
+                <div class="col text-left mt-md-3">
+                    <p class="pl-md-2 item-description">Matemáticas Macroeconomícas </p>
+                </div>
+            </div>
+
+        </a>
+    </div>
+
+    <!-- /#Educación -->
+
+    <div id="experiencia" class="col-12">
+        <a name="experiencia">
+            <h2>Experiencia</h2>
+
+            <div id="Exp1" class="row">
+                <div class="col-sm-12 col-md-3 text-left border-right pr-4">
+                    <div class="date">Noviembre 2018- Febrero 2019</div>
+                    <h4>Grupo GAF Riesgos</h4>
+                    <p class="subtitle">Proyección de datos (Proyecto)</p>
+                </div>
+
+                <div class="col text-left mt-md-3">
+                    <ul class="pl-md-2 item-description">
+                        <li>Construcción de indicadores y manejo de base de datos para elaboración de metodología de riesgos en materia de PLD y FT.</li>
+                        <li>Revisión de grado de riesgo del cliente.</li>
+                        <li>Ejecución de pruebas a sistemas para liberación de desarrollos.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div id="Exp2" class="row">
+                <div class="col-sm-12 col-md-3 text-left border-right pr-4">
+                    <div class="date">Febrero - Noviembre 2017
+                    </div>
+                    <h4>Instituto Metropolitano de Planeación (IMEPLAN Zona Conurbada Tampico)</h4>
+                    <p class="subtitle">Analista de Base de Datos (Proyecto)</p>
+                </div>
+
+                <div class="col text-left mt-md-3">
+                    <ul class="pl-md-2 item-description">
+                        <li>Construcción de indicadores para medir la expansión de la marcha urbana.</li>
+                        <li>Manejo de Base de datos para la tercerización de la economía de la zona conurbada de Tampico.</li>
+                        <li>Análisis de cuartiles sobre el impacto en la reducción de la competitividad laboral en la zona conurbada de Tampico.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div id="Exp3" class="row">
+                <div class="col-sm-12 col-md-3 text-left border-right pr-4">
+                    <div class="date">Enero 2015- Enero 2017</div>
+                    <h4>Cuerpo Académico de Economía y sociedad</h4>
+                    <p class="subtitle">Proyección y análisis de Base de datos Para el programa social PROSPERA</p>
+                </div>
+
+                <div class="col text-left mt-md-3">
+                    <ul class="pl-md-2 item-description">
+                        <li>Construcción de indicadores para conocer la disparidad salarial.</li>
+                        <li>Consumo de Base de datos para antecedentes de pobreza en la zona sur del País</li>
+                        <li>Proyección de estimadores para el crecimiento de la pobreza para los próximos 20 años.</li>
+                    </ul>
+                </div>
+            </div>
+
+        </a>
+    </div>
+
+    <!-- /#Experiencia -->
+
+
+    <div class="bd-example">
+        <a name="ejercicios">
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="..." class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </a>
+    </div>
+
+
+    <!-- /#Ejercicios -->
 </div>
