--- a/src/app/SpotiApp/Spotiapp.component.html
+++ b/src/app/SpotiApp/Spotiapp.component.html
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['/Home']">Home </a>
+                <a class="nav-link" [routerLink]="['Home']">Home </a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" [routerLink]="['/Search']">Search</a>
+                <a class="nav-link" [routerLink]="['Search']">Search</a>
             </li>
 
         </ul>
