--- a/src/app/SpotiApp/components/artista/artista.component.html
+++ b/src/app/SpotiApp/components/artista/artista.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="col-4 text-right">
 
-        <button routerLink="/search" class="btn btn-outline-danger">
+        <button routerLink="../search" class="btn btn-outline-danger">
         Regresar
       </button>
     </div>
