--- a/src/app/SpotiApp/components/home/home.component.html
+++ b/src/app/SpotiApp/components/home/home.component.html
@@ -1,4 +1,4 @@
-<app-loading *ngIf="loading"></app-loading>
+<!--<app-loading *ngIf="loading"></app-loading> -->
 
 <div *ngIf="error" class="alert alert-danger animated fadeIn">
     <h3>Error</h3>
