--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -13,7 +13,7 @@
                     <img src="../../../assets/cvimg/phone.png" alt="teléfono" style="width: 10%">(833) 403 1037
                 </li>
                 <li><img src="../../../assets/cvimg/what.png" alt="whatsapp" style="width: 10%">(55) 4318 9080</li>
-                <li><img src="../../../assets/cvimg/link.png" alt="linkedin" style="width: 10%"><a href="">/PabloDesarrolladorWeb</a></li>
+                <li><img src="../../../assets/cvimg/link.png" alt="linkedin" style="width: 10%"><a href="https://www.linkedin.com/in/PELC">Pablo E López Camargo</a></li>
             </ul>
         </div>
         <div class="col-md-9">
