--- a/src/app/SpotiApp/components/home/home.component.html
+++ b/src/app/SpotiApp/components/home/home.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="error" class="alert alert-danger animated fadeIn">
     <h3>Error</h3>
     <p>
-        Hola mundo
+        Refresque su página para generar el token.
     </p>
 </div>
 
