--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -12,14 +12,14 @@
                 <li>
                     <img src="../../../assets/cvimg/phone.png" alt="teléfono" style="width: 10%">(833) 403 1037
                 </li>
-                <li><img src="../../../assets/cvimg/what.png" alt="whatsapp" style="width: 10%">(55) 4318 9080</li>
+                <li><img src="../../../assets/cvimg/what.png" alt="whatsapp" style="width: 10%">(833) 403 1037</li>
                 <li><img src="../../../assets/cvimg/link.png" alt="linkedin" style="width: 10%"><a href="https://www.linkedin.com/in/PELC">Pablo E López Camargo</a></li>
             </ul>
         </div>
         <div class="col-md-9">
-            <img src="../../../assets/cvimg/profile.jpg" alt="chico">
+            <img src="../../../assets/cvimg/CV.jpeg" alt="chico">
             <p>
-                "Economista con especialidad en matemáticas por la Universidad Autónoma de Tamaulipas, desarrollo en estrategias de Riesgo Bursátil, Financiero y Estadísticos Macroeconómicos"
+                "Analista programador Front-end Angular, ,maquetación CSS-Bootstrap, egresado por la Universidad Autónoma de Tamaulipas"
             </p>
         </div>
     </div>
@@ -34,7 +34,7 @@
                 <span class="progress-right">
 												<span class="progress-bar"></span>
                 </span>
-                <div class="progress-value">90%</div>
+                <div class="progress-value">85%</div>
             </div>
             <p>Angular</p>
         </div>
@@ -46,7 +46,7 @@
                 <span class="progress-right">
 												<span class="progress-bar"></span>
                 </span>
-                <div class="progress-value">75%</div>
+                <div class="progress-value">90%</div>
             </div>
             <p>HTML</p>
         </div>
@@ -58,7 +58,7 @@
                 <span class="progress-right">
 												<span class="progress-bar"></span>
                 </span>
-                <div class="progress-value">90%</div>
+                <div class="progress-value">80%</div>
             </div>
             <p>CSS/JS</p>
         </div>
@@ -70,15 +70,110 @@
                 <span class="progress-right">
 												<span class="progress-bar"></span>
                 </span>
-                <div class="progress-value">75%</div>
+                <div class="progress-value">90%</div>
             </div>
-            <p>C#</p>
+            <p>TypeScript</p>
+        </div>
+        <div class="col">
+            <div class="progress blue">
+                <span class="progress-left">
+												<span class="progress-bar"></span>
+                </span>
+                <span class="progress-right">
+												<span class="progress-bar"></span>
+                </span>
+                <div class="progress-value">70%</div>
+            </div>
+            <p>PHP</p>
         </div>
     </div>
 </div>
 <div id="second" class="container-fluid">
     <div class="col-md-6">
-        <h3>Experiencia</h3>
+        <h3>Cursos</h3>
+        <ul style="text-align: center">
+
+            <li>
+                <a class="btn" data-toggle="modal" data-target="#CSSModal">
+                Curso de Angular 7 desde cero hasta profesional
+                </a>
+            </li>
+            <li>
+                <a class="btn" data-toggle="modal" data-target="#CSSModal">
+                 CSS para dar estilo a tus páginas web
+                </a>
+            </li>
+            <li>
+                <a class="btn" data-toggle="modal" data-target="#HTMLCModal">
+                HTML5 y CSS3
+                </a>
+            </li>
+            <li>
+                <a class="btn" data-toggle="modal" data-target="#HTMLModal">
+                HTML5 para diseños web
+                </a>
+            </li>
+            <li>
+                <a class="btn" data-toggle="modal" data-target="#PHPModal">
+                PHP y MySQL aprender a trabajar con Bases de datos
+                </a>
+            </li>
+            <li>
+                <a class="btn" data-toggle="modal" data-target="#PHPSQLModal">
+                 PHP y MySQLi conceptos básicos para principiantes
+                 </a>
+            </li>
+        </ul>
+        <h3>Educación</h3>
+        <ul>
+            <li>
+                <p>2018</p>
+                <h6>Especialidad en Finanzas y Banca</h6>
+                <p>Escuela Bancaria y Comercial</p>
+            </li>
+            <li>
+                <p>2012-2016</p>
+                <h6>Licenciatura en Economía</h6>
+                <p>Universidad Autónoma de Tamaulipas</p>
+            </li>
+            <li>
+                <p>2015</p>
+                <h6>ANE</h6>
+                <p>Matemáticas Macroeconomícas</p>
+            </li>
+        </ul>
+
+        <h3>Experiencia: Programador Front-end</h3>
+        <ul>
+            <li>
+                <h4>Alpha Credit</h4>
+                <h6> Creación de Prótotipo</h6>
+                <p>Noviembre 2018 - Marzo 2019</p>
+                <ul class="pl-md-2 item-description">
+                    <li><i class="far fa-bookmark"></i> Maquetado y diseño</li>
+                    <li> <i class="far fa-bookmark"></i> Configuración de Routing</li>
+                    <li><i class="far fa-bookmark"></i> Generación dinámica de formularios mediante un archivo de configuración JSON, separando los tipos de input en componentes. </li>
+                    <li><i class="far fa-bookmark"></i> Implementación de un componente de terceros para manipulación de imagenes. </li>
+                </ul>
+            </li>
+            <br>
+            <li>
+                <h4> Zipco.mx <small>Venta de inmuebles a nivel México (startup) </small> </h4>
+                <h6> Programador Angular </h6>
+                <p>Febrero 2017 - Noviembre 2018</p>
+                <ul class="pl-md-2 item-description">
+                    <li> <i class="far fa-bookmark"></i> Desarrollo e implementación de Pipes personalizados. </li>
+                    <li><i class="far fa-bookmark"></i> Desarrollo Core de servicios para proveer la funcionalidad de Componentes </li>
+                    <li><i class="far fa-bookmark"></i> Diseño estructural del proyecto con base en la lógica de carga diferida (Lazy Loading) </li>
+                    <li><i class="far fa-bookmark"></i> Implementación de gráficos para la visualización de macrodatos </li>
+                    <li><i class="far fa-bookmark"></i> Bosquejo de mapas con lenguaje Angular para la selección de inmuebles pertenecientes al startup </li>
+                    <li><i class="far fa-bookmark"></i> Esbozo de CRUD para la alimentación dinámica de la Base de Datos del Startup </li>
+                    <li><i class="far fa-bookmark"></i> Autenticación de información contenida mediante Auth0 </li>
+                </ul>
+            </li>
+            <br>
+        </ul>
+        <h3>Experiencia: Analista</h3>
         <ul>
             <li>
                 <h4>Grupo GAF Riesgos</h4>
@@ -113,26 +208,6 @@
                 </ul>
             </li>
         </ul>
-
-        <h3>Educación</h3>
-        <ul>
-            <li>
-                <p>2018</p>
-                <h6>Especialidad en Finanzas y Banca</h6>
-                <p>Escuela Bancaria y Comercial</p>
-            </li>
-            <li>
-                <p>2012-2016</p>
-                <h6>Licenciatura en Economía</h6>
-                <p>Universidad Autónoma de Tamaulipas</p>
-            </li>
-            <li>
-                <p>2015</p>
-                <h6>Asociación Nacional de Economía</h6>
-                <p>Matemáticas Macroeconomícas</p>
-            </li>
-        </ul>
-
     </div>
     <div class="col-md-6" style="margin-left:20px">
         <h3>Hábilidades</h3>
@@ -160,7 +235,7 @@
 
         </div>
         <h3>Inglés</h3>
-        <p>Conversacional: 50% <br>Lecto-escritura: 50%</p>
+        <p>Inglés técnico </p>
 
         <h3>Áptitudes</h3>
         <ul style="padding-left: 5%">
@@ -178,5 +253,123 @@
             </li>
         </ul>
 
+    </div>
+</div>
+
+<!-- Button trigger modal -->
+
+<!-- Modal -->
+<div class="modal fade" id="AngularModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Certificación Angular</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                <img src="../../../assets/cvimg/Angular.jpg" alt="angular" style="width: 100%; height: auto;">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="CSSModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Certificación CSS</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+            </div>
+            <div class="modal-body">
+                <img src="../../../assets/cvimg/CSS.jpg" alt="angular" style="width: 100%; height: auto;">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="HTMLCModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Certificación HTML Y CSS</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+            </div>
+            <div class="modal-body">
+                <img src="../../../assets/cvimg/HTMLC.jpg" alt="angular" style="width: 100%; height: auto;">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="HTMLModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Certificación HTML</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+            </div>
+            <div class="modal-body">
+                <img src="../../../assets/cvimg/HTML.jpg" alt="angular" style="width: 100%; height: auto;">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="PHPModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Certificación PHP</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+            </div>
+            <div class="modal-body">
+                <img src="../../../assets/cvimg/PHP.jpg" alt="angular" style="width: 100%; height: auto;">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="PHPSQLModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Certificación PHP y MySQLi</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+            </div>
+            <div class="modal-body">
+                <img src="../../../assets/cvimg/PHPSQL.jpg" alt="angular" style="width: 100%; height: auto;">
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            </div>
+        </div>
     </div>
 </div>
